Fixed properties view and scrollbar appearing

--- a/src/src/components/GoldenLayout/styles.scss
+++ b/src/src/components/GoldenLayout/styles.scss
@@ -13,7 +13,7 @@
 
 .lm_content {
   background: #1E1E1E;
-  overflow-y: auto;
+  overflow-y: overlay;
   width: 100% !important;
 
   &::-webkit-scrollbar-thumb {
